[package]
name = "dualshock"
version = "0.1.0"
authors = ["Štěpán Beneš <benes.stepan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bluez-async = "0.2.1"
tokio = { version = "1.2.0", features = ["full"] }
dbus = { version = "0.9.1", features = ["futures"] }
dbus-tokio = "0.7.3"
futures = "0.3.12"

