[package]
name = "dualshock"
version = "0.1.0"
authors = ["Štěpán Beneš <benes.stepan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
joydev = "0.3.1"
serial = "0.4.0"
robust-arduino-serial = "0.1.1"
async-std = { version = "1.9.0", features = ["attributes"] }
